// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Content Bucket 1 Slice Slice matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1sr0a1l"
  >
    <div
      class="css-1g5vzsh"
    >
      <div
        class="css-113lrfw"
      >
        <div
          class="css-lihpnt"
        >
          <div
            class="css-128qn49"
          >
            <div
              class="css-86cix"
            >
              <div
                class="css-1aiajnh"
              >
                <section
                  class="css-5diunv"
                >
                  <h3
                    class="nk-headline-heading css-i2jo9u"
                  >
                    Rugby Union
                  </h3>
                </section>
              </div>
            </div>
            <a
              class="css-166fjww"
              data-testid="buttonLink"
              href="https://www.thetimes.co.uk/"
              role="link"
            >
              <svg
                aria-hidden="true"
                class="css-3rbz36"
                fill="currentcolor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                  fill="currentcolor"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1klr24i"
    >
      <div
        class="css-13byt3y"
      >
        <div
          class="css-15edd2j"
        >
          <hr
            aria-hidden="true"
            class="css-uh7mej"
            data-testid="divider"
          />
        </div>
        <div
          class="css-iqarug"
        >
          <div
            class="css-1vuk75f"
          >
            <div
              class="css-uxw9nr"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/main_01.jpg"
                />
              </picture>
            </div>
            <p
              class="css-9pk24b"
            >
              Credit
            </p>
          </div>
          <div
            class="css-gpke1l"
          >
            <hr
              aria-hidden="true"
              class="css-tk98gp"
              data-testid="divider"
            />
            <a
              class="css-10h0i3c"
              href="https://www.thetimes.co.uk"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-8gj81n"
                >
                  Sarcacens an inclusive club? They didnt look out for me
                </span>
              </span>
            </a>
            <p
              class="css-1nrveqv"
            >
              Lyon lock Joel Kpoku tells Will Kelleher that he’s fired up to face old team — and urges more English stars to move to France
            </p>
            <div
              class="css-1atazsr"
              data-testid="tag-and-flag"
            >
              <a
                class="css-10d4t8c"
                href="/"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-zhtub2"
                  >
                    Review
                  </span>
                </span>
              </a>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1vzvkql"
              >
                4 min read
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-13byt3y"
      >
        <div
          class="css-196m710"
        >
          <div
            class="css-1g5vzsh"
          >
            <hr
              aria-hidden="true"
              class="css-obfal1"
              data-testid="divider"
            />
          </div>
          <div
            class="css-1704wtt"
          >
            <div
              class="css-19w1t19"
            >
              <div
                class="css-1kwj960"
              >
                <picture
                  class="css-33c418"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Deborah Haynes"
                    class="css-1t6p58q"
                    src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                    width="77px"
                  />
                </picture>
              </div>
              <div
                class="css-lq9usb"
              >
                <a
                  class="css-gull0f"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Deborah Haynes
                    </span>
                  </span>
                </a>
                <p
                  class="css-d8s6u6"
                >
                  Now is Willis’s chance to show he’s got more to offer than Curry
                </p>
              </div>
            </div>
            <hr
              aria-hidden="true"
              class="css-clg7cq"
              data-testid="divider"
            />
            <div
              class="css-19w1t19"
            >
              <div
                class="css-1kwj960"
              >
                <picture
                  class="css-33c418"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Deborah Haynes 2"
                    class="css-1t6p58q"
                    src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                    width="77px"
                  />
                </picture>
              </div>
              <div
                class="css-lq9usb"
              >
                <a
                  class="css-gull0f"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Deborah Haynes 2
                    </span>
                  </span>
                </a>
                <p
                  class="css-d8s6u6"
                >
                  Now is Willis’s chance to show he’s got more to offer than Curry
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-84gtiy"
    >
      <div
        class="css-1r4d587"
      >
        <div
          class="css-1g5vzsh"
        >
          <hr
            aria-hidden="true"
            class="css-obfal1"
            data-testid="divider"
          />
        </div>
      </div>
      <div
        class="css-11icnc2"
      >
        <div
          class="css-6o7d61"
          data-testid="article-container"
          style="position: relative;"
        >
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_01.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-u57k3c"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    European cup winner Mihajlovic dies aged 53 after battle with leukaemia
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_02.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-u57k3c"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    ‘American owners pose threat to English pyramid’
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_03.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-u57k3c"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_04.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-u57k3c"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Blow for rebel clubs as court says Uefa can block Super League
                  </span>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-po9buu"
            data-testid="divider"
          />
        </div>
      </div>
    </div>
    <div
      class="css-13fsx86"
    >
      <div
        class="css-113lrfw"
      >
        <div
          class="css-1g5vzsh"
        >
          <hr
            aria-hidden="true"
            class="css-obfal1"
            data-testid="divider"
          />
        </div>
        <div
          class="css-1704wtt"
        >
          <div
            class="css-19w1t19"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-33c418"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="Deborah Haynes"
                  class="css-1t6p58q"
                  src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                  width="77px"
                />
              </picture>
            </div>
            <div
              class="css-lq9usb"
            >
              <a
                class="css-gull0f"
                href="/"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Deborah Haynes
                  </span>
                </span>
              </a>
              <p
                class="css-d8s6u6"
              >
                Now is Willis’s chance to show he’s got more to offer than Curry
              </p>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-clg7cq"
            data-testid="divider"
          />
          <div
            class="css-19w1t19"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-33c418"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="Deborah Haynes 2"
                  class="css-1t6p58q"
                  src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                  width="77px"
                />
              </picture>
            </div>
            <div
              class="css-lq9usb"
            >
              <a
                class="css-gull0f"
                href="/"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Deborah Haynes 2
                  </span>
                </span>
              </a>
              <p
                class="css-d8s6u6"
              >
                Now is Willis’s chance to show he’s got more to offer than Curry
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render Content Bucket 1 Slice Slice matches snapshot for mobile 1`] = `
<DocumentFragment>
  <div
    class="css-1sr0a1l"
  >
    <div
      class="css-1g5vzsh"
    >
      <div
        class="css-113lrfw"
      >
        <div
          class="css-lihpnt"
        >
          <div
            class="css-128qn49"
          >
            <div
              class="css-86cix"
            >
              <div
                class="css-1aiajnh"
              >
                <section
                  class="css-5diunv"
                >
                  <h3
                    class="nk-headline-heading css-i2jo9u"
                  >
                    Rugby Union
                  </h3>
                </section>
              </div>
            </div>
            <a
              class="css-166fjww"
              data-testid="buttonLink"
              href="https://www.thetimes.co.uk/"
              role="link"
            >
              <svg
                aria-hidden="true"
                class="css-3rbz36"
                fill="currentcolor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                  fill="currentcolor"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1klr24i"
    >
      <div
        class="css-13byt3y"
      >
        <div
          class="css-15edd2j"
        >
          <hr
            aria-hidden="true"
            class="css-uh7mej"
            data-testid="divider"
          />
        </div>
        <div
          class="css-6wqjuf"
        >
          <div
            class="css-1l8qede"
          >
            <div
              class="css-uxw9nr"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/main_01.jpg"
                />
              </picture>
            </div>
            <p
              class="css-9pk24b"
            >
              Credit
            </p>
          </div>
          <div
            class="css-gpke1l"
          >
            <a
              class="css-10h0i3c"
              href="https://www.thetimes.co.uk"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-1tplk7g"
                >
                  Sarcacens an inclusive club? They didnt look out for me
                </span>
              </span>
            </a>
            <p
              class="css-1nrveqv"
            >
              Lyon lock Joel Kpoku tells Will Kelleher that he’s fired up to face old team — and urges more English stars to move to France
            </p>
            <div
              class="css-1atazsr"
              data-testid="tag-and-flag"
            >
              <a
                class="css-10d4t8c"
                href="/"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-zhtub2"
                  >
                    Review
                  </span>
                </span>
              </a>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1vzvkql"
              >
                4 min read
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-13byt3y"
      >
        <div
          class="css-196m710"
        >
          <div
            class="css-1g5vzsh"
          >
            <hr
              aria-hidden="true"
              class="css-obfal1"
              data-testid="divider"
            />
          </div>
          <div
            class="css-1704wtt"
          >
            <div
              class="css-19w1t19"
            >
              <div
                class="css-1kwj960"
              >
                <picture
                  class="css-33c418"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Deborah Haynes"
                    class="css-1t6p58q"
                    src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                    width="77px"
                  />
                </picture>
              </div>
              <div
                class="css-lq9usb"
              >
                <a
                  class="css-gull0f"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Deborah Haynes
                    </span>
                  </span>
                </a>
                <p
                  class="css-d8s6u6"
                >
                  Now is Willis’s chance to show he’s got more to offer than Curry
                </p>
              </div>
            </div>
            <hr
              aria-hidden="true"
              class="css-clg7cq"
              data-testid="divider"
            />
            <div
              class="css-19w1t19"
            >
              <div
                class="css-1kwj960"
              >
                <picture
                  class="css-33c418"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Deborah Haynes 2"
                    class="css-1t6p58q"
                    src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                    width="77px"
                  />
                </picture>
              </div>
              <div
                class="css-lq9usb"
              >
                <a
                  class="css-gull0f"
                  href="/"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Deborah Haynes 2
                    </span>
                  </span>
                </a>
                <p
                  class="css-d8s6u6"
                >
                  Now is Willis’s chance to show he’s got more to offer than Curry
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-84gtiy"
    >
      <div
        class="css-1r4d587"
      >
        <div
          class="css-1g5vzsh"
        >
          <hr
            aria-hidden="true"
            class="css-obfal1"
            data-testid="divider"
          />
        </div>
      </div>
      <div
        class="css-11icnc2"
      >
        <div
          class="css-1r18k3i"
        >
          <div
            class="css-6uqogc"
            data-testid="scroll-container"
          >
            <div
              class="css-6o7d61"
              data-testid="article-container"
              style="position: relative;"
            >
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-1kwj960"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="/assets/small_01.jpg"
                    />
                  </picture>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        European cup winner Mihajlovic dies aged 53 after battle with leukaemia
                      </span>
                    </span>
                  </a>
                </div>
              </div>
              <hr
                aria-hidden="true"
                class="css-13rcg9f"
                data-testid="divider"
              />
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-1kwj960"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="/assets/small_02.jpg"
                    />
                  </picture>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        ‘American owners pose threat to English pyramid’
                      </span>
                    </span>
                  </a>
                </div>
              </div>
              <hr
                aria-hidden="true"
                class="css-13rcg9f"
                data-testid="divider"
              />
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-1kwj960"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="/assets/small_03.jpg"
                    />
                  </picture>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                      </span>
                    </span>
                  </a>
                </div>
              </div>
              <hr
                aria-hidden="true"
                class="css-13rcg9f"
                data-testid="divider"
              />
              <div
                class="css-1nw1nne"
              >
                <div
                  class="css-1kwj960"
                >
                  <picture
                    class="css-zp0elg"
                  >
                    <div
                      class="css-5pczz7"
                    />
                    <img
                      alt="This is ALT Text"
                      class="css-1qgqq71"
                      src="/assets/small_04.jpg"
                    />
                  </picture>
                </div>
                <div
                  class="css-diffbd"
                >
                  <a
                    class="css-u57k3c"
                    href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                    role="link"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-65zrxz"
                      >
                        Blow for rebel clubs as court says Uefa can block Super League
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-13fsx86"
    >
      <div
        class="css-113lrfw"
      >
        <div
          class="css-1g5vzsh"
        >
          <hr
            aria-hidden="true"
            class="css-obfal1"
            data-testid="divider"
          />
        </div>
        <div
          class="css-1704wtt"
        >
          <div
            class="css-19w1t19"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-33c418"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="Deborah Haynes"
                  class="css-1t6p58q"
                  src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                  width="77px"
                />
              </picture>
            </div>
            <div
              class="css-lq9usb"
            >
              <a
                class="css-gull0f"
                href="/"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Deborah Haynes
                  </span>
                </span>
              </a>
              <p
                class="css-d8s6u6"
              >
                Now is Willis’s chance to show he’s got more to offer than Curry
              </p>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-clg7cq"
            data-testid="divider"
          />
          <div
            class="css-19w1t19"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-33c418"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="Deborah Haynes 2"
                  class="css-1t6p58q"
                  src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                  width="77px"
                />
              </picture>
            </div>
            <div
              class="css-lq9usb"
            >
              <a
                class="css-gull0f"
                href="/"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Deborah Haynes 2
                  </span>
                </span>
              </a>
              <p
                class="css-d8s6u6"
              >
                Now is Willis’s chance to show he’s got more to offer than Curry
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
